fixed project description styling with overflow scroll

--- a/sass/modules/_modules.sass
+++ b/sass/modules/_modules.sass
@@ -124,7 +124,7 @@
     padding-inline-start: 0
     margin: 0 auto
     gap: 15%
-    // margin-top: 10%
+    margin-top: 4%
 
 .project-link-list a
     max-width: 125px
@@ -153,7 +153,7 @@
     color: rgb(85, 85, 85)
     max-width: 100%
     width: 100%
-    height: 25vmax
+    height: 35vmax
     margin: 0 auto
 
 .project-heading
